Update Elastic Search on Amazon Products.ipynb

--- a/Elastic Search on Amazon Products.ipynb
+++ b/Elastic Search on Amazon Products.ipynb
@@ -51,8 +51,8 @@
       "source": [
         "from elasticsearch import Elasticsearch\n",
         "es = Elasticsearch(\n",
-        "    cloud_id=\"My_deployment:dXMtY2VudHJhbDEuZ2NwLmNsb3VkLmVzLmlvJDc2NDcwMGE1YTA0YzQ3ZjJhNzc1MjE3NWNkMTM4M2I1JDE3ODllMjE4MWFhYjRhMjY4M2UzYWU2YmFiZDhkYzU2\",\n",
-        "    api_key=\"THFvUGtZd0I0d2hWU3Nma3ludDc6bmowNUZJM1FRWnUyckpuNzZuQ2ZVUQ\"\n",
+        "    cloud_id=\"My_deployment:***\",\n",
+        "    api_key=\"***\"\n",
         ")\n"
       ],
       "metadata": {
