Update Elastic Search on Amazon Products.ipynb

--- a/Elastic Search on Amazon Products.ipynb
+++ b/Elastic Search on Amazon Products.ipynb
@@ -1385,7 +1385,7 @@
         "        }\n",
         "    }\n",
         "})\n",
-        "hits = response.get('hits', {}).get('hits', [])\n",
+        "hits = response_empty_reviews.get('hits', {}).get('hits', [])\n",
         "\n",
         "# Print the formatted hits\n",
         "formatted_hits = json.dumps(hits, indent=2)\n",
